# qode_ai

./: .env.example  .gitignore  pyproject.toml
apps/accounts/: adapter.py  admin.py  forms.py  mixins.py  models.py  signals.py  urls.py
apps/accounts/api/: serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/views/: __init__.py  auth.py
apps/assistants/: admin.py  apps.py  filler.py  forms.py  models.py  signal.py  signals.py
apps/assistants/api/: choices.py  urls.py
apps/assistants/migrations/: 0001_initial.py
apps/core/: decorator.py  exceptions.py  mixins.py  models.py  pagination.py  permissions.py  slugger.py  test_string_function.py  views.py  widgets.py
apps/core/functions/: __init__.py  calendar.py  events.py  mail.py
apps/core/openai/: __init__.py  assistant.py  files.py  function.py  runner.py  type.py  vector.py
apps/home/: views.py
apps/home/templatetags/: frontend.py
apps/message/: admin.py  apps.py  models.py  signals.py  types.py  views.py
apps/message/api/: urls.py
apps/message/migrations/: 0001_initial.py
apps/sandbox/: __init__.py  runner.py
apps/sandbox/f_definations/: __init__.py
assets/reactUI/: index.html  style.css
base/: api_urls.py  settings.py  urls.py
frontend/: package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  Routes.jsx  index.css
frontend/src/Pages/: Home.jsx  Message.jsx  Threads.jsx
frontend/src/store/: index.js
static/reactUI/: index.js
templates/: index.html
templates/account/: login.html
templates/email/: email.html  email.txt
(+23 files in other folders)
